# dauphin-notion-mcp

./: .gitignore  README.md  pyproject.toml
.claude/commands/: sync-upstream.md
docs/: dnn-spec.md
src/: notion_mcp.py
tests/: test_notion_mcp.py
