[project]
name = "dauphin-notion-mcp"
version = "0.1.0"
description = "Token-efficient MCP server for Notion using DNN (Dauphin Notion Notation)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "parsy>=2.0",
]

[project.scripts]
dauphin-notion-mcp = "notion_mcp:main"

[tool.setuptools]
py-modules = ["notion_mcp"]
package-dir = {"" = "src"}

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: marks tests as integration tests (require running server, credentials)",
]
